--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Shan's Awesome Video Poker</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css" type="text/css"/>
     <link
       href="https://fonts.googleapis.com/css?family=Press Start 2P"
       rel="stylesheet"
